--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "locomotive-scroll": "^5.0.0-beta.13",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.2.1"
   },
   "devDependencies": {
     "postcss": "^8",
